file(GLOB_RECURSE SOURCES
        "dht_client/*.cpp" "config_parser/*.cpp"
        "../utils/*.cpp" "main.cpp")
add_executable(dht_client ${SOURCES})
target_include_directories(dht_client PRIVATE
        dht_client config_parser
        ${Boost_INCLUDE_DIR} ../utils)
target_link_libraries(dht_client PRIVATE
        Boost::program_options Boost::system
        Boost::thread ppconsul
        dds_grpc_proto ${_REFLECTION}
        ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
